--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <h2>Welcome to Azure !!! </H2>
 <br>
-<b>THIS IS AN EDIT THAT THEY WILL LOVE...</b>
+<b>I    MISS     PRINCE!!!!!!!!!!!!!!!!!!!!!!!!!!.</b>
 <br>
 
 <h2>Yo this is the new update from 5/7!!!!</h2>
