--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<B>A new awesome app update!!</B>
 
-<b>This is a fantastic change.....</b><br>
-
-  <h2>Welcome to Azure !!! </H2>
+h2>Welcome to Azure !!! </H2>
 <br>
 <b>I    MISS     PRINCE!!!!!!!!!!!!!!!!!!!!!!!!!!.</b>
 <br>
